tests/miniJava/neg/006693_mutation.MiniJava
class java { public static void public Main ( String [ ] java ) { { } } }
